2010-10-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/46011
	* gcc.target/i386/vectorize4-avx.c: Scan 256bit AVX register
	and xfail.

2010-10-14  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/recip-vec-sqrtf-avx.c: Scan 256bit AVX
	register.
	* gcc.target/i386/recip-vec-divf-avx.c: Likewise.

2010-10-14  Andrey Belevantsev  <abel@ispras.ru>

	* gcc.target/ia64/20101005.c: New test.

2010-10-14  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/45570
	* gcc.dg/pr45570.c: New test.

2010-10-13  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/recip-vec-sqrtf-avx.c: New.
	* gcc.target/i386/recip-vec-divf-avx.c: Likewise.
	* gcc.target/i386/vectorize4-avx.c: Likewise.

2010-10-13  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/avx-copysign-vec.c: New.
	* gcc.target/i386/avx-copysignf-vec.c: Likewise.

2010-10-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/44130
	* gcc.target/i386/pr44130.c: New.

2010-10-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/44144
	* gcc.target/i386/pr44144.c: New.

2010-10-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/44180
	* gcc.target/i386/pr44180.c: New.

2010-10-13  Jason Merrill  <jason@redhat.com>

	* g++.dg/template/canon-type-8.C: New.

2010-10-13  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/20101013-1.c: New test.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR objc/45878
	* objc.dg/pr45878.m: New testcase.

2010-10-13  Kai Tietz  <kai.tietz@onevision.com>

	* gcc.dg/format/dfp-scanf-1.c: Disable for *-*-mingw* targets.
	* gcc.dg/format/dfp-printf-1.c: Likewise.
	* gcc.dg/format/ms_unnamed-1.c: Adjust linenumber for warning.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45788
	* g++.dg/pr45788.C: New testcase.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45970
	* gcc.dg/tree-ssa/ssa-dse-13.c: New testcase.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45982